amway/lynx-ua-iac/production-ua/terraform/virginia-eks-v3/tests/2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:645993801158:certificate/b9ea01b0-0ad3-4c08-adbe-d96f67e228cb"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
  labels:
    app: 2048-ingress
spec:
  rules:
    - host: "2048.ru.eia.amway.net"
      http:
        paths:
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
