amway/lynx-ua-iac/production-ua/terraform/virginia-eks-v3/tests/2048-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: 2048-game
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - 2048.ru.eia.amway.net
    secretName: tls-2048-secret
  rules:
  - host: 2048.ru.eia.amway.net
    http:
      paths:
        - path: /
          backend:
            serviceName: service-2048
            servicePort: 80
